# model-router

./: README.md  pyproject.toml
model_router/: schemas.py  server.py
model_router/router/: selector.py  token_estimator.py
